[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/GUI/Lobby.gd" type="Script" id=1]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Room" type="Panel" parent="."]
margin_left = 650.0
margin_top = 34.0
margin_right = 1240.0
margin_bottom = 734.0
__meta__ = {
"_edit_group_": true
}

[node name="ChatInput" type="LineEdit" parent="Room"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = -80.0
margin_right = -30.0
margin_bottom = -30.0
editable = false
clear_button_enabled = true

[node name="ChatDisplay" type="RichTextLabel" parent="Room"]
anchor_right = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = 590.0
meta_underlined = false

[node name="Control" type="Control" parent="."]
margin_left = 40.0
margin_top = 34.0
margin_right = 630.0
margin_bottom = 734.0

[node name="JoinButton" type="Button" parent="Control"]
margin_left = 190.0
margin_top = 606.0
margin_right = 588.0
margin_bottom = 656.0
text = "Join"

[node name="LeaveButton" type="Button" parent="Control"]
margin_top = 666.0
margin_right = 168.0
margin_bottom = 722.0
text = "Leave"

[node name="HostButton" type="Button" parent="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 190.0
margin_top = -34.0
margin_right = 590.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 92, -183 )
text = "Host"

[node name="IpEnter" type="LineEdit" parent="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -64.0
margin_right = 168.0
margin_bottom = -40.0
rect_pivot_offset = Vector2( 44, -183 )
text = "127.0.0.1"

[node name="NameEnter" type="LineEdit" parent="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -94.0
margin_right = 168.0
margin_bottom = -70.0
rect_pivot_offset = Vector2( 44, -183 )
text = "Default Username"
align = 1

[node name="StartGame" type="Button" parent="Control"]
margin_top = 526.0
margin_right = 588.0
margin_bottom = 596.0
disabled = true
text = "Start Game"

[node name="PlayerList" type="ItemList" parent="Control"]
margin_right = 590.0
margin_bottom = 506.0

